2008-08-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add infrastructure to more easily tweak GCC warnings for "make all".

	* configure.in: When using GCC, don't modify `CFLAGS';
	instead, set var `AGGRESSIVE_WARNINGS'.  Enable many warnings.
	(AGGRESSIVE_WARNINGS): New AC_SUBST.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Don't check for `crypt' in libcrypt.

	* build-aux/guile-pg.m4 (PQ_FLAGS): No longer check for func
	`crypt' in libcrypt.  No longer modfiy `PQ_LDFLAGS' accordingly.

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Tighten up "show-platform" a bit.

	* Makefile.am (dist-hook): Also substitute "RECIP".

2008-08-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop support for PostgreSQL 7.3.x and earlier.

	* build-aux/guile-pg.m4 (PQ_FLAGS): No longer check
	for `PQsetdbLogin' in libpq.  Instead, check for
	`PQprotocolVersion'.  Update error message.
	* configure.in: No longer check for `PQconnectdb' in libpq.
	No longer check for `InvalidOID' decl in libpq-fe.h.
	(INVALIDOID_HEADER): Delete this AC_DEFINE.
	(PQfmod, PQbinaryTuples, PQbackendPID)
	(PQresultErrorMessage, PQpass, PQputnbytes)
	(PQoidValue, PQsetnonblocking, PQisnonblocking)
	(PQprotocolVersion, PQfreemem): No longer AC_CHECK_FUNCS these.

2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-resx) proc: object<-result

	* doc/guile-pg.twerp (Result Transforms): Reorg intro blurbs
	slightly; add @twerpdoc for `object<-result'.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use guile.m4 facilities from Guile 1.4.1.118.

	* configure.in (mkpimmc): New GUILE_TOOLS_PROG.
	(mkmodcat): Likewise.
	* Makefile.am (.module-catalog): Use $(mkpimmc).
	(install-data-hook): Use $(mkmodcat).

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Sync guile.m4.snap with upstream.

	* build-aux/guile.m4.snap: Sync w/ Guile 1.4.1.118.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Don't distribute autogen.sh.

	* Makefile.am (EXTRA_DIST): Remove autogen.sh.
